--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,14 @@ function saveSnippet() {
   });
 }
 
+function loadSnippet() {
+  fetch("/load-snippet")
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById("data").value = data;
+    });
+}
+
 function clearSnippet() {
   fetch("/save-snippet", {
     method: "POST",
@@ -35,7 +43,11 @@ function clearSnippet() {
       "Content-Type": "application/json",
     },
     body: JSON.stringify({ data: ""}),
+  }).then(() => {
+    loadSnippet();
   });
 }
+
+loadSnippet();
 </script>
 </html>
