feat: Add CSS for styling
The app did not have any styling before. Now it is still simple, but
doesn't just look like unformatted HTML.

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,47 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style type="text/css">
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #eee;
+}
+textarea {
+  display: block;
+  font-family: monospace;
+  font-size: 14px;
+  height: 80vh;
+  resize: none;
+  margin: 1rem;
+  margin-bottom: 0;
+  width: calc(100% - 2rem);
+  padding: 0rem;
+}
+
+button {
+  margin: 1rem;
+  margin-top: 0;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+.controls {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
   </style>
 </head>
 
