--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #eee;
 }
+
 textarea {
   display: block;
   font-family: monospace;
@@ -52,10 +53,12 @@ button:hover {
 </head>
 
 <body>
-  <textarea id="data" style="width: 100%; height: 200px;"></textarea>
-  <button onclick="saveSnippet()">Save</button>
-  <button onclick="loadSnippet()">Load</button>
-  <button onclick="clearSnippet()">Clear</button>
+  <textarea id="data" placeholder="Enter your snippet here..." spellcheck="false"></textarea>
+  <div class="controls">
+    <button onclick="saveSnippet()">Save</button>
+    <button onclick="loadSnippet()">Load</button>
+    <button onclick="clearSnippet()">Clear</button>
+  <div>
 </body>
 
 <script>
